[package]
name = "deno-notify"
version = "0.0.1"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
deno_core = "0.45.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.4"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "3.3"

[target.'cfg(windows)'.dependencies]
winrt = {version = "0.5.0", features = ["windows-data", "windows-ui"]}
